<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.laplacestudio.keyschecker.MainActivity">



    <item
        android:id="@+id/menu_action_search"
        android:enabled="false"
        android:orderInCategory="10"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_action_multi_select"
        android:enabled="false"
        android:orderInCategory="12"
        android:title="@string/action_multi_select"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_action_settings"
        android:enabled="false"
        android:orderInCategory="19"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_demo"
        android:orderInCategory="20"
        android:title="@string/action_demo"
        app:showAsAction="never" />


    <item android:id="@+id/menu_action_debug"
        android:orderInCategory="21"
        android:title="@string/action_debug"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/menu_action_about"
        android:orderInCategory="99"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item android:id="@+id/menu_action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>