<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/app_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--    app icon-->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon"
            tools:targetApi="LOLLIPOP"
            tools:ignore="ContentDescription" />

        <!--    app name-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/app_about_text_big"
            android:text="@string/app_name"/>

        <!--    app version-->
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/app_about_text_middle"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_version"/>

        <!--    app developer-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:textSize="@dimen/app_about_text_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_developer"/>

<!--        right-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/app_about_text_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_rights"/>

        <!--    app developer contact information-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/app_about_text_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_developer_phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/app_about_text_small"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/app_developer_email"/>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_back"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:cardCornerRadius="42dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/bg_cv_fab"
        app:fabSize="normal"
        tools:targetApi="lollipop">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:src="@drawable/icon"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>