<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_item_card"
    android:transitionName="@string/layout_main_and_capture">

    <!--    Preview container-->
    <RelativeLayout
        android:id="@+id/rl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/capture_control_panel_height"
        android:background="@color/bg_item_card"
        android:gravity="center">


        <!--        Container  for preview-->
        <RelativeLayout
            android:id="@+id/rl_preview_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextureView
                android:id="@+id/auto_tv_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true" />


        </RelativeLayout>

        <!--        Container for panel layout template-->
        <RelativeLayout
            android:id="@+id/rl_panel_template_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </RelativeLayout>

        <!--        Image captured-->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/btn_normal_height"
            android:layout_marginBottom="@dimen/btn_small_height"
            android:visibility="invisible"
            app:cardBackgroundColor="@color/control_text"
            app:cardCornerRadius="@dimen/btn_corner_radius">

            <ImageView
                android:id="@+id/iv_image_captured"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:maxHeight="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/test_1"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_normal_height"
            android:layout_marginTop="@dimen/btn_small_height_half"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="@dimen/btn_normal_height_half"
            android:background="@drawable/pop_text"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_icon_detecting"
                android:layout_width="@dimen/btn_normal_height"
                android:layout_height="@dimen/btn_normal_height"
                android:visibility="gone"
                android:src="@drawable/ic_detecting"/>

            <TextView
                android:id="@+id/tv_current_panel_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_normal_height"
                android:elevation="@dimen/btn_elevation"
                android:gravity="center"
                android:text="@string/detection_panel"
                android:textColor="@color/control_text"
                android:textSize="14sp" />
        </LinearLayout>

        <!--            Panel switch-->
        <RelativeLayout
            android:id="@+id/rl_panel_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_normal_height"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="@dimen/btn_large_height"
            android:layout_marginBottom="@dimen/btn_small_height_half">
            <Button
                android:id="@+id/btn_last_panel"
                android:layout_width="120dp"
                android:layout_height="@dimen/btn_normal_height"
                android:background="@drawable/selector_btn_transparent"
                android:textColor="@color/control_text"
                android:text="上一部分"/>
            <Button
                android:id="@+id/btn_next_panel"
                android:layout_width="120dp"
                android:layout_height="@dimen/btn_normal_height"
                android:layout_alignParentEnd="true"
                android:background="@drawable/selector_btn_transparent"
                android:textColor="@color/control_text"
                android:text="下一部分"/>
        </RelativeLayout>
    </RelativeLayout>

    <!--    Control panel-->
    <LinearLayout
        android:layout_width="@dimen/capture_control_panel_height"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="@dimen/btn_normal_height_half"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingHorizontal="@dimen/btn_small_height"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/btn_select_panel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_normal_height"
                    android:layout_centerInParent="true"
                    android:background="@drawable/selector_btn_negative"
                    android:elevation="@dimen/btn_elevation"
                    android:gravity="center"
                    android:text="@string/btn_select_panel"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/btn_options"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_normal_height"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="@dimen/btn_small_height"
                    android:background="@drawable/selector_btn_negative"
                    android:elevation="@dimen/btn_elevation"
                    android:gravity="center"
                    android:text="@string/btn_detection_options"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>
        </LinearLayout>

        <!--            Capture button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_capture"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/selector_btn_round"
                android:elevation="5dp"
                android:padding="10dp"
                android:src="@drawable/icon"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/btn_small_height"
            android:gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/btn_help"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_normal_height"
                    android:background="@drawable/selector_btn_negative"
                    android:elevation="@dimen/btn_elevation"
                    android:gravity="center"
                    android:layout_centerInParent="true"
                    android:text="@string/btn_help"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/btn_cv_quit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_normal_height"
                    android:layout_centerInParent="true"
                    android:background="@drawable/selector_btn_negative"
                    android:elevation="@dimen/btn_elevation"
                    android:gravity="center"
                    android:text="@string/btn_quit"
                    android:textColor="@color/colorPrimaryDark" />
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>